JO-2007-12-03-0: RFE:         DBW should use batch inserts
                 Bugster:     6566325
                 Issue:       2285
                 Bugfix:      DBWriter should not exit if there is a database connection error
                 Bugster:     6636466
                 Issue:       2438
                 Review:      RH

AP-2007-12-05-0: Bugfix:      arco_read should be able to create synonyms 
                              instead of arco_write
                 Bugster:     6565635
                 Issue:       2282
                 Review:      JO

JG-2007-11-26-0: CVS          Created V61u3_TAG
-----------------------------------------------

AP-2007-11-08-0: Bugfix:      Correction of AP-2007-10-31-0 - ARCo doesn't 
                              support tablespaces for Postgresql database.

AP-2007-11-07-2: Bugfix:      Correction of commit AP-2007-11-06-1

AP-2007-11-07-1: Bugfix:      Changing default tablespace for Oracle to USERS
                 
AP-2007-11-07-0: Bugfix:      o ju_exit_status should provide means to recognize 
                              the intermediate record
                              o fix of correction of usage summary for Oracle db
                 Bugster:     6621482
                 Review:      JO

AP-2007-11-06-1: Bugfix:      During the installation the admin user should create web.xml file
                 Bugster:     6620253
                 Review:      JG

AP-2007-11-06-0: Bugfix:     Added Wallclock Time example query for Postgresql db.

AP-2007-11-05-0: Correction of previous commits

JO-2007-11-01-0: Correction of commit JO-2007-10-24-0

AP-2007-11-01-0: Correction of commit AP-2007-10-31-0

JO-2007-10-31-1: Correction of commit JO-2007-10-31-0:

JO-2007-10-31-0: Bugfix:      Long running jobs cause incorrect usage summary from ARCo database
                 Bugster:     6618599
                 Issue:       2414
                 Review:      AP
