@@ -30,6 +30,7 @@
 ##########################################################################
 #___INFO__MARK_END__
 application.title=ARCo
+export.name=Export As:
 
 options.title=Options
 options.pagetitleText=Options
